# spcs-dash-clean

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  dash-app.template.yml  docker-compose.yml  env.template  main.py  manifest.yml  pyproject.toml
.github/workflows/: ci.yml
components/: __init__.py  layout.py
pages/: __init__.py  analytics.py  dashboard.py  data_browser.py
src/scripts/: setup.sql
src/spcs_dash_clean/: __init__.py  tasks.py
static/: styles.css
tests/: README.md  __init__.py  conftest.py  test_advanced_security_bypasses.py  test_components_layout.py  test_connection_security.py  test_integration.py  test_legitimate_queries.py  test_page_callbacks.py  test_pages_simple.py  test_security.py  test_security_stress.py  test_snowflake_utils.py
utils/: __init__.py  snowflake_utils.py
