[project]
name = "levelup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "prefect>=3.4.10",
    "snowflake>=1.6.0",
    "dash==3.2.0",
    "plotly==6.2.0",
    "pandas==2.3.1",
    "snowflake-snowpark-python[pandas]>=1.35.0",
    "dash-bootstrap-components==2.0.3",
    "dash-ag-grid>=32.3.0",
    "pytz>=2025.2",
]

[dependency-groups]
dev = [
    "ruff>=0.12.5",
]
